--- a/example/css/example.css
+++ b/example/css/example.css
@@ -104,6 +104,13 @@ div {
   padding: 0;  
 }
 
+#right_top_panel {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  padding: 0;  
+}
+
 #camera-controls {
   position: absolute;
   bottom: 20px;
