--- a/example/css/example.css
+++ b/example/css/example.css
@@ -97,6 +97,12 @@ div {
   overflow-y: auto; 
 }
 
+#add-checkout {
+  display: none;
+  padding: 20px;
+  overflow-y: auto;
+}
+
 #main-controls {
   position: absolute;
   top: 20px;
@@ -160,4 +166,11 @@ div {
   opacity: 0;
   cursor: inherit;
   display: block;
+}
+
+.total_price {
+  text-align: right;
+}
+.total_price_checkout {
+  text-align: right;
 }
