--- a/example/css/bootstrap.css
+++ b/example/css/bootstrap.css
@@ -1123,7 +1123,7 @@ img {
 .carousel-inner > .item > a > img {
   display: block;
   max-width: 100%;
-  height: auto;
+  height: 25rem;
 }
 .img-rounded {
   border-radius: 6px;
