New models and csv export feature

--- a/example/css/example.css
+++ b/example/css/example.css
@@ -174,3 +174,11 @@ div {
 .total_price_checkout {
   text-align: right;
 }
+
+.inline-flex {
+  display: inline-block;
+}
+
+.alignRight {
+  text-align: right;
+}
